feat: Reconcile with claude/upgrade-v6-standards-lWvgE - 15 agent swarm
## Reconciliation Summary (15 Agents)

### Module POMs
- Simplified build configuration in yawl-engine, yawl-integration, yawl-stateless
- Fixed include/exclude tag patterns

### Authentication
- Import ordering standardization
- Improved error logging in JwtManager, YSessionCache

### Integration
- Added A2A authentication framework (8 new files)
- Added CredentialManager for centralized credential handling
- MCP SDK bridge API documentation

### Exceptions
- Import ordering standardization
- Kept full constructor set in YConnectivityException

### Schema
- Log4j2 integration replacing printStackTrace()
- Complete LSInput implementation in Input.java

### Logging
- Added debug logging for exception fallthrough
- Thread-safe Hashtable for XES building

### Unmarshal
- Improved logging with context
- Preserved SafeNumberParser usage

### Resilience
- Import ordering standardization
- Removed duplicate package-info files

### Util
- Added contextual error logging in StringUtil, AbstractEngineClient

### Documentation
- Added V6 upgrade documentation (16 files)
- Added VIOLATION_REPORT.md, GAP_FIX checklists
- Updated BEST-PRACTICES-2026.md

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>